Statistics added, config rewrite